ghost/admin/app/styles/layouts/editor.css
/* ... */
.gh-og-preview-footer-left {
    overflow: hidden;
    padding-top: 18px;
    color: #90949c;
    font-size: 11px;
    line-height: 11px;
    letter-spacing: -0.1px;
    text-transform: uppercase;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.gh-og-preview-footer-left-divider {
    padding: 0 5px;
}

.gh-og-preview-footer-author {
    color: #3b5998;
}

/* Twitter Card Preview */
.gh-twitter-preview {
    overflow: hidden;
    border-width: 1px;
    border-style: solid;
    border-color: #e1e8ed;
    color: #292f33;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 1.4rem;
    line-height: 1.3em;
    background: #fff;
    border-radius: 0.42857em;

    -webkit-font-smoothing: antialiased;
}

.gh-twitter-preview-image {
    width: 100%;
    height: 160px;
    background-size: cover;
    background-position: center center;
}

.gh-twitter-preview-content {
    padding: 12px 14px;
}

.gh-twitter-preview-title {
    max-height: 1.3em;
    overflow: hidden;
    margin: 0 0 0.15em;
    font-weight: bold;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.gh-twitter-preview-description {
    overflow: hidden;
    margin-top: 0.32333em;
}

.gh-twitter-preview-footer {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: 0.35em;
}

.gh-twitter-preview-footer-left {
    max-height: 1.3em;
    overflow: hidden;
    color: #8899a6;
    text-transform: lowercase;
    text-overflow: ellipsis;
    white-space: nowrap;
}


/* NEW editor
/* ---------------------------------------------------------- */

.gh-main > section.gh-editor-fullscreen {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1000;
    width: 100%;
    height: 100%;
    background-color: white;
}

.gh-editor {
    max-width: calc(100vw - var(--editor-sidebar-width))
}

@media (max-width: 1024px) {
    .gh-editor {
        max-width: 100%;
    }
}

.gh-editor-header {
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    height: 34px;
    padding: 0;
    margin: 30px;
    z-index: 799;
}

@media (max-width: 1024px) {
    .gh-editor-header {
        z-index: 100;
        height: 64px;
        margin: 0;
        padding: 0;
        padding-left: 15px;
        background-color: var(--white);
        border-radius: 0;
    }
}

@media (max-width: 500px) {
    .gh-editor-header .mobile {
        margin-left: 5px;
    }
}

.gh-btn-editor {
    background: var(--white) !important;
}

.gh-btn-editor:not(.gh-publish-trigger) span {
    color: var(--darkgrey);
}

.gh-btn-editor:hover {
    background: var(--whitegrey) !important;
}

.gh-btn-editor.active {
    background: var(--whitegrey) !important;
}

.gh-btn-editor.green span {
    color: var(--green-d1);
}

.gh-btn-editor.midgrey span {
    color: var(--midgrey-l2);
}

.gh-editor-wordcount-container {
    position: absolute;
    right: 30px;
    bottom: 30px;
    display: flex;
    align-items: center;
    border-radius: 3px;
    background: var(--white);
}

.gh-editor-wordcount-container svg {
    width: 1.6rem;
    height: 1.6rem;
    margin: 9px 12px;
}

.gh-editor-wordcount-container svg path {
    stroke: var(--midgrey-l2);
}

.gh-editor-wordcount {
    padding: 0 4px 0 14px;
    color: var(--midgrey-l2);
    font-size: 1.3rem;
    font-weight: 400;
}

.gh-editor-status {
    color: var(--midgrey);
    font-size: 1.3rem;
    font-weight: 400;
}

.gh-editor-container {
    position: absolute;
    z-index: 0;
    width: 100%;
    height: 100%;
    overflow-y: auto;
    padding: 10vw 4vw;
}

.gh-editor-inner {
    height: 100%;
    max-width: 740px;
    margin: 0 auto;
}

.gh-editor-feature-image-container {
    position: relative;
    display: block;
    width: 100%;
    height: 60px;
    max-width: 740px;
    min-height: auto;
    margin: -56px auto 0;
    padding-bottom: 3.6rem;
}

@media (max-width: 1400px) {
    .gh-editor-feature-image-container {
        margin: 0 auto;
    }
}

.gh-editor-feature-image-container .gh-progress-container-progress {
    width: 100%;
}


@media (max-width: 500px) {
    .gh-editor-feature-image-container {
        padding-bottom: 2rem;
    }

    .gh-editor-feature-image-container .invisible {
        visibility: visible;
    }
}

.gh-editor-feature-image-dropzone {
    position: absolute;
    left: 0;
    right: 0;
    height: 175px;
    top: -50px;
    pointer-events: none;
}

body[data-user-is-dragging] .gh-editor-feature-image-dropzone {
    pointer-events: auto;
}

.gh-editor-feature-image-drop-indicator {
    position: absolute;
    left: 0;
    right: 0;
    top: 40px;
    height: 4px;
}

.gh-editor-feature-image .image-action {
    opacity: 0;
}

.gh-editor-feature-image:hover .image-action {
    opacity: 1;
}

.gh-editor-feature-image-add-button {
    display: flex;
    align-items: center;
    color: var(--midgrey-l2);
    font-size: 1.35rem;
    font-weight: 400;
    letter-spacing: .2px;
}

.gh-editor-feature-image-add-button:hover {
    color: var(--midgrey-d2);
}

.gh-editor-feature-image-add-button svg {
    width: 12px;
    height: auto;
    margin-right: 6px;
}

.gh-editor-feature-image-add-button svg path {
    stroke-width: 1.8;
}

.gh-editor-feature-image-add-button:hover svg path {
    stroke: var(--midgrey-d2);
}

.gh-editor-feature-image-unsplash {
    width: 1em;
    height: 1em;
    margin-left: 24px;
    line-height: 1.2;
}

.gh-editor-feature-image-unsplash svg {
    fill: var(--lightgrey-d2);
}

.gh-editor-feature-image-unsplash:hover svg {
    fill: var(--black);
}

.gh-editor-feature-image-indicator {
    position: absolute;
    top: -1px;
    height: 2.4rem;
    margin-left: -6rem;
}

.gh-editor-feature-image-indicator svg {
    height: 2.4rem;
}

.gh-editor-feature-image-indicator svg path {
    stroke: var(--midgrey-l2);
}
/* ... */

